// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component renders correctly when loading 1`] = `
.c5 svg {
  height: 16px;
  fill: currentColor;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 4rem;
  line-height: 4rem;
  color: white;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 {
  text-decoration: none;
  height: 4rem;
  min-width: 4rem;
  padding: 0 1rem;
  text-align: center;
  font-size: 1.4rem;
  cursor: pointer;
}

.c4 {
  padding-top: 12px;
  line-height: 1;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <a
      className="c2"
      href="/sessions"
      onClick={[Function]}
    >
      Games
    </a>
  </div>
  <div
    className="c3"
  >
    <a
      className="c2"
      href="/"
      onClick={[Function]}
    >
      <div
        className="c4"
      >
        <div
          className="c5"
          dangerouslySetInnerHTML={
            Object {
              "__html": Object {},
            }
          }
          height="16px"
        />
      </div>
    </a>
  </div>
  <div
    className="c6"
  />
</div>
`;

exports[`Header component renders correctly when logged in 1`] = `
.c5 svg {
  height: 16px;
  fill: currentColor;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 4rem;
  line-height: 4rem;
  color: white;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c2 {
  text-decoration: none;
  height: 4rem;
  min-width: 4rem;
  padding: 0 1rem;
  text-align: center;
  font-size: 1.4rem;
  cursor: pointer;
}

.c4 {
  padding-top: 12px;
  line-height: 1;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <a
      className="c2"
      href="/sessions"
      onClick={[Function]}
    >
      Games
    </a>
  </div>
  <div
    className="c3"
  >
    <a
      className="c2"
      href="/"
      onClick={[Function]}
    >
      <div
        className="c4"
      >
        <div
          className="c5"
          dangerouslySetInnerHTML={
            Object {
              "__html": Object {},
            }
          }
          height="16px"
        />
      </div>
    </a>
  </div>
  <div
    className="c6"
  >
    <a
      className="c2"
      href="/u/test-username/testId"
      onClick={[Function]}
    >
      test username
    </a>
    <a
      className="c2"
      href="/settings"
      onClick={[Function]}
    >
      <i
        className="fa fa-cog"
      />
    </a>
  </div>
</div>
`;
